Use Koin for DI

--- a/infrastructure/src/main/resources/application.conf
+++ b/infrastructure/src/main/resources/application.conf
@@ -6,8 +6,9 @@ ktor {
   }
   application {
     modules = [
+      com.example.di.InjectionKt.inject,
       com.example.plugins.RoutingKt.configureRouting,
-      com.example.plugins.SerializationKt.configureSerialization
+      com.example.plugins.SerializationKt.configureSerialization,
       com.example.plugins.GraphQLKt.configureGraphQL
     ]
   }
