--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ logback_version=1.2.3
 kotlin.code.style=official
 kgraphql_version=0.17.14
 koin_version=2.2.2
+exposed_version=0.34.1
+h2_version=1.4.200
